--- a/admin.html
+++ b/admin.html
@@ -155,6 +155,7 @@
           <a href="team_list.html">Teams</a>
           <a href="team_fixtures.html">Fixtures</a>
           <a href="admin.html" class="active" aria-current="page">Admin</a>
+          <a href="about_us.html">About Us</a>
         </div>
         <button id="mobile-menu-button" class="mobile-menu-button" aria-label="Toggle menu" aria-expanded="false">
           <svg class="h-6 w-6" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24"
@@ -168,6 +169,7 @@
         <a href="team_list.html">Teams</a>
         <a href="team_fixtures.html">Fixtures</a>
         <a href="admin.html" class="active" aria-current="page">Admin</a>
+        <a href="about_us.html">About Us</a>
       </div>
     </nav>
   </header>
