--- a/team_fixtures.html
+++ b/team_fixtures.html
@@ -149,7 +149,7 @@
           </svg>
         </button>
       </div>
-      <div id="mobile-menu" hidden>
+      <div id="mobile-menu" class="hidden md:hidden">
         <a href="index.html">Home</a>
         <a href="team_list.html">Teams</a>
         <a href="team_fixtures.html" class="active" aria-current="page">Fixtures</a>
@@ -182,7 +182,7 @@
     mobileMenuBtn.addEventListener('click', () => {
       const expanded = mobileMenuBtn.getAttribute('aria-expanded') === 'true';
       mobileMenuBtn.setAttribute('aria-expanded', String(!expanded));
-      mobileMenu.hidden = expanded;
+      mobileMenu.classList.toggle('hidden');
     });
   </script>
 </body>
