--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
           </svg>
         </button>
       </div>
-      <div id="mobile-menu" hidden>
+      <div id="mobile-menu" class="hidden md:hidden">
         <a href="index.html" class="active" aria-current="page">Home</a>
         <a href="team_list.html">Teams</a>
         <a href="team_fixtures.html">Fixtures</a>
@@ -203,7 +203,6 @@
       </div>
     </nav>
   </header>
-
   <!-- Main layout -->
   <div class="max-w-7xl mx-auto grid grid-cols-1 md:grid-cols-3 gap-10 px-4 md:px-0 py-8">
     <!-- Main content (left 2 cols) -->
