--- a/about_us.html
+++ b/about_us.html
@@ -171,7 +171,7 @@
           </svg>
         </button>
       </div>
-      <div id="mobile-menu" hidden>
+      <div id="mobile-menu" class="hidden md:hidden">
         <a href="index.html">Home</a>
         <a href="team_list.html">Teams</a>
         <a href="team_fixtures.html">Fixtures</a>
@@ -196,7 +196,7 @@
     mobileMenuBtn.addEventListener('click', () => {
       const expanded = mobileMenuBtn.getAttribute('aria-expanded') === 'true';
       mobileMenuBtn.setAttribute('aria-expanded', String(!expanded));
-      mobileMenu.hidden = expanded;
+      mobileMenu.classList.toggle('hidden');
     });
   </script>
 </body>
