--- a/team_fixtures.html
+++ b/team_fixtures.html
@@ -1,188 +1,124 @@
 <!DOCTYPE html>
-<html lang="en" >
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Fixtures - Under Maintenance</title>
+  <title>Fixtures - We Are Eleven</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
     body {
       font-family: Inter, system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial;
-      background-color: #f1f5f9; /* Tailwind slate-100 */
-      color: #1e293b; /* Tailwind slate-800 */
-      min-height: 100vh;
+      background: #f8fafc; /* Unified background */
+      color: #1e293b;
       margin: 0;
-      padding: 2rem;
+      min-height: 100vh;
       display: flex;
-      justify-content: center;
-      align-items: center;
       flex-direction: column;
     }
-    @media (min-width: 640px) {
-      body {
-        padding: 4rem;
-      }
-    }
-    /* Unified Header & nav styles */
-    nav.max-w-7xl {
-      width: 100%;
-      max-width: 1120px;
+
+    /* Header */
+    nav {
       background-color: white;
       box-shadow: 0 1px 3px rgb(0 0 0 / 0.1);
       position: sticky;
       top: 0;
-      z-index: 30;
-      padding-left: 1rem;
-      padding-right: 1rem;
-      margin-bottom: 2rem;
+      z-index: 50;
     }
-    @media (min-width: 640px) {
-      nav.max-w-7xl {
-        padding-left: 1.5rem;
-        padding-right: 1.5rem;
-      }
-    }
-    .header-inner {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      height: 4rem;
-    }
-    .brand {
-      font-weight: 800;
-      font-size: 1.5rem;
-      color: #111827; /* gray-900 */
-      user-select: none;
-    }
-    .desktop-nav {
-      display: none;
-      gap: 2rem;
-    }
-    .desktop-nav a {
+    .nav-link {
       font-weight: 600;
-      font-size: 0.875rem;
-      color: #475569; /* slate-600 */
+      font-size: 0.9rem;
+      color: #475569;
       text-decoration: none;
-      position: relative;
     }
-    .desktop-nav a:hover,
-    .desktop-nav a:focus-visible {
-      color: #2563EB; /* blue-600 */
-      outline-offset: 2px;
-      outline: 2px solid #2563EB;
-      border-radius: 0.3rem;
+    .nav-link:hover,
+    .mobile-link:hover {
+      color: #2563EB;
     }
-    .desktop-nav a.active {
+    .nav-link.active,
+    .mobile-link.active {
       color: #2563EB;
       font-weight: 700;
     }
-    .mobile-menu-button {
-      background: none;
-      border: none;
-      cursor: pointer;
-      color: #475569;
-    }
-    #mobile-menu {
-      display: none;
-      background-color: white;
-      box-shadow: 0 1px 3px rgb(0 0 0 / 0.1);
-      position: absolute;
-      top: 4rem;
-      left: 0;
-      width: 100%;
-      max-width: 100vw;
-      border-top: 1px solid #CBD5E0;
-      padding-top: 0.5rem;
-      padding-bottom: 0.5rem;
-      z-index: 25;
-    }
-    #mobile-menu a {
-      display: block;
+    .mobile-link {
       padding: 0.75rem 1rem;
       font-weight: 600;
       font-size: 1rem;
       color: #475569;
       text-decoration: none;
+      border-bottom: 1px solid #e2e8f0;
     }
-    #mobile-menu a:hover,
-    #mobile-menu a:focus-visible {
-      background-color: #E0F2FE;
-      color: #2563EB;
-      outline-offset: 2px;
-      outline: 2px solid #2563EB;
+
+    main {
+      flex-grow: 1;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      padding: 2rem;
     }
-    #mobile-menu a.active {
-      color: #2563EB;
-      font-weight: 700;
-    }
-    @media (min-width: 768px) {
-      .desktop-nav {
-        display: flex;
-        align-items: center;
-      }
-      .mobile-menu-button {
-        display: none;
-      }
-      #mobile-menu {
-        display: none !important;
-      }
+    .card {
+      background: white;
+      padding: 2rem;
+      border-radius: 1rem;
+      box-shadow: 0 8px 20px rgb(0 0 0 / 0.1);
+      max-width: 500px;
+      text-align: center;
     }
   </style>
 </head>
 <body>
-  <!-- Unified Header -->
+  <!-- Header -->
   <header>
     <nav aria-label="Primary Navigation" class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-      <div class="header-inner">
-        <div class="brand">We Are Eleven</div>
-        <div class="desktop-nav">
-          <a href="index.html">Home</a>
-          <a href="team_list.html">Teams</a>
-          <a href="team_fixtures.html" class="active" aria-current="page">Fixtures</a>
-          <a href="admin.html">Admin</a>
-          <a href="about_us.html">About Us</a>
+      <div class="header-inner flex justify-between items-center h-16">
+        <div class="brand font-extrabold text-xl text-gray-900">We Are Eleven</div>
+        <!-- Desktop Nav -->
+        <div class="desktop-nav hidden md:flex gap-6">
+          <a href="index.html" class="nav-link">Home</a>
+          <a href="team_list.html" class="nav-link">Teams</a>
+          <a href="team_fixtures.html" class="nav-link active" aria-current="page">Fixtures</a>
+          <a href="admin.html" class="nav-link">Admin</a>
+          <a href="about_us.html" class="nav-link">About Us</a>
         </div>
-        <button id="mobile-menu-button" class="mobile-menu-button" aria-label="Toggle menu" aria-expanded="false">
-          <svg class="h-6 w-6" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24"
-            stroke-linecap="round" stroke-linejoin="round" aria-hidden="true">
+        <!-- Mobile button -->
+        <button id="mobile-menu-button" class="mobile-menu-button md:hidden" aria-label="Toggle menu" aria-expanded="false">
+          <svg class="h-6 w-6 text-slate-700" fill="none" stroke="currentColor" stroke-width="2"
+            viewBox="0 0 24 24" stroke-linecap="round" stroke-linejoin="round">
             <path d="M4 6h16M4 12h16M4 18h16"></path>
           </svg>
         </button>
       </div>
-      <div id="mobile-menu" class="hidden md:hidden">
-        <a href="index.html">Home</a>
-        <a href="team_list.html">Teams</a>
-        <a href="team_fixtures.html" class="active" aria-current="page">Fixtures</a>
-        <a href="admin.html">Admin</a>
-        <a href="about_us.html">About Us</a>
+      <!-- Mobile dropdown -->
+      <div id="mobile-menu" class="hidden flex-col bg-white shadow-md border-t border-slate-200">
+        <a href="index.html" class="mobile-link">Home</a>
+        <a href="team_list.html" class="mobile-link">Teams</a>
+        <a href="team_fixtures.html" class="mobile-link active" aria-current="page">Fixtures</a>
+        <a href="admin.html" class="mobile-link">Admin</a>
+        <a href="about_us.html" class="mobile-link">About Us</a>
       </div>
     </nav>
   </header>
 
-  <main class="bg-white rounded-2xl shadow-md p-8 max-w-lg w-full text-center">
-    <h1 class="text-4xl font-bold mb-6">Page Under Maintenance</h1>
-    <p class="text-lg mb-4">
-      The <strong>Fixtures</strong> page is currently under maintenance.
-    </p>
-    <p class="mb-6">
-      Fixtures will be released soon and updates will be informed on the Notice Board.
-    </p>
-    <section class="bg-blue-50 border border-blue-300 rounded-lg p-4 mx-auto max-w-md">
-      <h2 class="text-xl font-semibold mb-2">📢 Notice Board</h2>
-      <p class="text-sm text-blue-700">
-        No notices published yet. Stay tuned here for updates.
-      </p>
-    </section>
+  <!-- Main Content -->
+  <main>
+    <div class="card">
+      <h1 class="text-3xl font-bold mb-4">Page Under Maintenance</h1>
+      <p class="text-lg mb-4">The <strong>Fixtures</strong> page is currently under maintenance.</p>
+      <p class="mb-6">Fixtures will be released soon and updates will be informed on the Notice Board.</p>
+      <section class="bg-blue-50 border border-blue-300 rounded-lg p-4">
+        <h2 class="text-xl font-semibold mb-2">📢 Notice Board</h2>
+        <p class="text-sm text-blue-700">No notices published yet. Stay tuned here for updates.</p>
+      </section>
+    </div>
   </main>
 
+  <!-- Mobile menu script -->
   <script>
-    // Mobile menu toggle
-    const mobileMenuBtn = document.getElementById('mobile-menu-button');
-    const mobileMenu = document.getElementById('mobile-menu');
-    mobileMenuBtn.addEventListener('click', () => {
-      const expanded = mobileMenuBtn.getAttribute('aria-expanded') === 'true';
-      mobileMenuBtn.setAttribute('aria-expanded', String(!expanded));
-      mobileMenu.classList.toggle('hidden');
+    const mobileMenuBtn = document.getElementById("mobile-menu-button");
+    const mobileMenu = document.getElementById("mobile-menu");
+    mobileMenuBtn.addEventListener("click", () => {
+      const expanded = mobileMenuBtn.getAttribute("aria-expanded") === "true";
+      mobileMenuBtn.setAttribute("aria-expanded", !expanded);
+      mobileMenu.classList.toggle("hidden");
     });
   </script>
 </body>
