--- a/admin.html
+++ b/admin.html
@@ -91,6 +91,13 @@
     button:hover {
       background-color: #1d4ed8;
     }
+    .error {
+      color: #dc2626;
+      margin-top: 0.5rem;
+      font-size: 0.875rem;
+      min-height: 1.25rem;
+      text-align: center;
+    }
   </style>
 </head>
 <body>
@@ -130,16 +137,30 @@
   <main>
     <div class="card">
       <h1 class="text-2xl font-bold mb-6 text-center">Admin Login</h1>
-      <form>
-        <input type="text" placeholder="Username" required />
-        <input type="password" placeholder="Password" required />
-        <button type="submit">Login</button>
+      <form id="loginForm" novalidate autocomplete="off">
+        <input
+          type="email"
+          id="email"
+          name="email"
+          placeholder="jyotishka27@org.com"
+          required
+        />
+        <input
+          type="password"
+          id="password"
+          name="password"
+          placeholder="Enter password"
+          required
+        />
+        <div id="errorMsg" class="error" role="alert" aria-live="assertive"></div>
+        <button type="submit">Login as Admin</button>
       </form>
     </div>
   </main>
 
-  <!-- Mobile menu script -->
+  <!-- Scripts -->
   <script>
+    // Mobile menu toggle
     const mobileMenuBtn = document.getElementById("mobile-menu-button");
     const mobileMenu = document.getElementById("mobile-menu");
     mobileMenuBtn.addEventListener("click", () => {
@@ -147,6 +168,30 @@
       mobileMenuBtn.setAttribute("aria-expanded", !expanded);
       mobileMenu.classList.toggle("hidden");
     });
+
+    // Admin login logic
+    (() => {
+      const loginForm = document.getElementById("loginForm");
+      const errorMsg = document.getElementById("errorMsg");
+      const ADMIN_EMAIL = "jyotishka27@org.com";
+      const ADMIN_PASSWORD = "Leavemealoner8@";
+
+      loginForm.addEventListener("submit", (e) => {
+        e.preventDefault();
+        errorMsg.textContent = "";
+        const email = loginForm.email.value.trim();
+        const password = loginForm.password.value;
+        if (!email || !password) {
+          errorMsg.textContent = "Please enter both email and password.";
+          return;
+        }
+        if (email.toLowerCase() === ADMIN_EMAIL && password === ADMIN_PASSWORD) {
+          window.location.href = "football_auctioneer.html";
+        } else {
+          errorMsg.textContent = "Invalid email or password.";
+        }
+      });
+    })();
   </script>
 </body>
 </html>
