--- a/about_us.html
+++ b/about_us.html
@@ -113,19 +113,19 @@
     <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8">
       <!-- Card 1 -->
       <div class="card">
-        <img src="https://via.placeholder.com/120" alt="Debayan" class="avatar" />
+        <img src="Debayan.jpg" alt="Debayan" class="avatar" />
         <h2 class="text-xl font-semibold mb-2">Debayan</h2>
         <p class="text-slate-600 text-sm">Co-Organizer</p>
       </div>
       <!-- Card 2 -->
       <div class="card">
-        <img src="https://via.placeholder.com/120" alt="Gourav" class="avatar" />
+        <img src="Gourav.jpg" alt="Gourav" class="avatar" />
         <h2 class="text-xl font-semibold mb-2">Gourav</h2>
         <p class="text-slate-600 text-sm">Co-Organizer</p>
       </div>
       <!-- Card 3 -->
       <div class="card">
-        <img src="https://via.placeholder.com/120" alt="Jyotishka" class="avatar" />
+        <img src="Jyotishka.jpg" alt="Jyotishka" class="avatar" />
         <h2 class="text-xl font-semibold mb-2">Jyotishka</h2>
         <p class="text-slate-600 text-sm">Co-Organizer</p>
       </div>
