--- a/index.html
+++ b/index.html
@@ -157,16 +157,12 @@
       </article>
     </main>
 
-    <!-- Sidebar -->
-    <aside class="bg-white rounded-2xl shadow p-6">
-      <h2 class="text-xl font-semibold mb-4">Quick Links</h2>
-      <div class="nav-buttons">
-        <button onclick="location.href='team_list.html'">View Teams</button>
-        <button onclick="location.href='team_fixtures.html'">Fixtures</button>
-        <button onclick="location.href='football_auctioneer.html'">Auctioneer</button>
-        <button onclick="location.href='about_us.html'">About Us</button>
-      </div>
-    </aside>
+<!-- Sidebar -->
+<aside class="bg-white rounded-2xl shadow p-6">
+  <h2 class="text-xl font-semibold mb-4">📢 Notice Board</h2>
+  <p class="text-slate-700 text-sm">No notices published yet. Stay tuned here for updates.</p>
+</aside>
+
   </div>
 
   <!-- Mobile menu script -->
@@ -181,3 +177,4 @@
   </script>
 </body>
 </html>
+
