--- a/index.html
+++ b/index.html
@@ -158,10 +158,10 @@
     </main>
 
 <!-- Sidebar -->
-<aside class="bg-white rounded-2xl shadow p-6">
-  <h2 class="text-xl font-semibold mb-4">📢 Notice Board</h2>
-  <p class="text-slate-700 text-sm">No notices published yet. Stay tuned here for updates.</p>
-</aside>
+<section class="bg-blue-50 border border-blue-300 rounded-lg p-4">
+  <h2 class="text-xl font-semibold mb-2">📢 Notice Board</h2>
+  <p class="text-sm text-blue-700">No notices published yet. Stay tuned here for updates.</p>
+</section>
 
   </div>
 
@@ -177,4 +177,5 @@
   </script>
 </body>
 </html>
+
 
