--- a/about_us.html
+++ b/about_us.html
@@ -15,7 +15,6 @@
       display: flex;
       flex-direction: column;
     }
-
     /* Header */
     nav {
       background-color: white;
@@ -47,12 +46,10 @@
       text-decoration: none;
       border-bottom: 1px solid #e2e8f0;
     }
-
     main {
       flex-grow: 1;
       padding: 2rem 1rem;
     }
-
     .card {
       background: white;
       padding: 2rem;
@@ -106,7 +103,6 @@
       </div>
     </nav>
   </header>
-
   <!-- Main -->
   <main class="max-w-6xl mx-auto">
     <h1 class="text-3xl font-bold mb-10 text-center">Meet The Organizers</h1>
@@ -130,8 +126,23 @@
         <p class="text-slate-600 text-sm">Co-Organizer</p>
       </div>
     </div>
-  </main>
 
+    <!-- New About Us section -->
+    <section class="bg-white rounded-2xl shadow p-6 mt-12 text-slate-700 leading-relaxed text-justify">
+      <p>
+        Welcome to&nbsp;<strong>We Are Eleven</strong>, a passionate football group that embodies the spirit of unity, teamwork, and excellence on and off the pitch.
+      </p>
+      <p class="mt-4">
+        Founded on the belief that football is more than just a game, our group brings together a diverse team of players, organizers, and supporters who share one mission: to celebrate the beautiful game through competitive spirit, camaraderie, and unwavering dedication.
+      </p>
+      <p class="mt-4">
+        We are more than just eleven players; we are a family united by our love for football, striving to uplift and inspire each other with every kick. Whether it's intense tournaments, friendly matches, or community events, We Are Eleven stands as a symbol of passion, resilience, and sportsmanship.
+      </p>
+      <p class="mt-4">
+        Join us on this incredible journey towards greatness, as we continue to build a legacy of teamwork, respect, and unforgettable moments on the field. Together, we play, we conquer, we are eleven.
+      </p>
+    </section>
+  </main>
   <!-- Mobile menu script -->
   <script>
     const mobileMenuBtn = document.getElementById("mobile-menu-button");
